# szabalyzatok

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  get_env_windows.bat  latex_packages.txt  readme.md  texlive-packages.txt
.cmake/: helper.cmake
.gitlab-ci/: export_paths.sh  install_cache.sh  texlive.profile.template
CHOK/: CMakeLists.txt  chok.tex
CTSzK/: CMakeLists.txt
FONAL/: CMakeLists.txt
Hazirend/: CMakeLists.txt
Muhelyek/: CMakeLists.txt  informatika.tex
SzMSz/: CMakeLists.txt
meghivo/: invitation.tex
